fix: remove token exchange claim mappings
The same functionality is available using custom claims.

AM-7607
